--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "daisyui": "^4.7.3",
     "encoding": "^0.1.13"
   }
 }
