--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-tinder-card": "^1.6.4",
+    "styled-components": "^6.1.8",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
