--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-tinder-card": "^1.6.4",
     "styled-components": "^6.1.8",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "use-state-with-callback": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
