--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
-    "react-tinder-card": "^1.6.4",
+    "react-touch-events": "^3.0.0",
     "styled-components": "^6.1.8",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "use-state-with-callback": "^3.0.2"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
