--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-touch-events": "^3.0.0",
     "styled-components": "^6.1.8",
     "tailwindcss": "3.4.1",
