--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "update-types": "npx supabase gen types typescript --project-id \"thuuymitstzfotzwerap\" > supabase.ts"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
+    "react-touch-events": "^3.0.0",
+    "styled-components": "^6.1.8",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
@@ -21,6 +28,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "daisyui": "^4.7.3",
     "encoding": "^0.1.13"
   }
 }
