--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "daisyui": "^4.10.2",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.1.0",
+    "react-touch-events": "^3.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
