--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
+    "react-tag-autocomplete": "^7.2.0",
     "react-touch-events": "^3.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
