fixed not being able to view the libraries of other users

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
     "react-touch-events": "^3.0.0",
+    "swr": "^2.2.5",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
